# DDM-Engine

./: .gitignore  README.md
DDM-Engine/: CMakeLists.txt  CMakeSettings.json
DDM-Engine/DDM/: CMakeLists.txt
DDM-Engine/DDM/BaseClasses/: Component.h  GameObject.cpp  GameObject.h
DDM-Engine/DDM/Components/: Camera.cpp  Camera.h  InfoComponent.cpp  InfoComponent.h  MeshRenderComponent.cpp  MeshRenderer.cpp  MeshRenderer.h  ModelLoader.cpp  ModelLoader.h  ModelLoaderComponent.cpp  ModelLoaderComponent.h  Rotator.cpp  Rotator.h  RotatorComponent.h  SkyBox.cpp  SkyBox.h  SkyBoxComponent.h  SpectatorMovement.cpp  SpectatorMovement.h  SpectatorMovementComponent.h  Transform.cpp  Transform.h  TransformComponent.cpp  TransformComponent.h
DDM-Engine/DDM/Components/Light/: Light.h  LightComponent.cpp  LightComponent.h
DDM-Engine/DDM/Components/MaterialSwitcher/: MaterialSwitchManager.cpp  MaterialSwitchManager.h  MaterialSwitcher.cpp  MaterialSwitcher.h
DDM-Engine/DDM/DataTypes/: Image.cpp  Image.h  Mesh.h  Structs.h
DDM-Engine/DDM/DataTypes/DescriptorObjects/: DescriptorObject.h  (+5 more)
DDM-Engine/DDM/Engine/: DDMEngine.cpp  DDMEngine.h  DDMModelLoader.cpp  Scene.cpp  Scene.h  main.cpp
DDM-Engine/DDM/Includes/: DDMModelLoaderIncludes.h  STBIncludes.cpp  STBIncludes.h  VulkanIncludes.h
DDM-Engine/DDM/Managers/: InputManager.cpp  InputManager.h  ResourceManager.cpp  ResourceManager.h  SceneManager.cpp  SceneManager.h  TimeManager.cpp  TimeManager.h
DDM-Engine/DDM/Vulkan/: VulkanObject.cpp  VulkanObject.h  VulkanUtils.cpp
DDM-Engine/Resources/DefaultResources/: Default.frag  DeferredLighting.frag  DrawQuad.vert
DDM-Engine/Resources/Shaders/: DefferedDiffuse.frag  DiffNorm.frag  DiffNormSpec.frag  Diffuse.frag  DiffuseUnshaded.frag  MultiShader.frag  MultiShader.vert  NormalMap.frag  Specular.frag  Test.frag
DDM3-Lite-Engine/DDM3-Lite/: CMakeLists.txt
DDM3-Lite-Engine/DDM3-Lite/BaseClasses/: Component.h  GameObject.cpp  GameObject.h
DDM3-Lite-Engine/DDM3-Lite/Components/: AnimatorComponent.cpp  AnimatorComponent.h  CameraComponent.cpp  CameraComponent.h  DirectionalLightComponent.cpp  DirectionalLightComponent.h  InfoComponent.cpp  InfoComponent.h  MeshRenderComponent.cpp  MeshRenderComponent.h  ModelLoaderComponent.cpp  RotatorComponent.cpp  RotatorComponent.h  SkyBoxComponent.cpp  SkyBoxComponent.h  SpectatorMovementComponent.cpp  SpectatorMovementComponent.h  TransformComponent.cpp
DDM3-Lite-Engine/DDM3-Lite/DataTypes/: Mesh.cpp  Mesh.h  Structs.h
DDM3-Lite-Engine/DDM3-Lite/Engine/: DDM3Engine.cpp  DDM3Engine.h  DDMEngine.cpp  DDMModelLoader.cpp  DDMModelLoader.h  Scene.cpp  Scene.h  Singleton.h  Window.cpp  Window.h  main.cpp
DDM3-Lite-Engine/DDM3-Lite/Includes/: DXGIIncludes.h  VulkanIncludes.h
DDM3-Lite-Engine/DDM3-Lite/Managers/: ConfigManager.h  ResourceManager.cpp  SceneManager.cpp  SceneManager.h  TimeManager.h
DDM3-Lite-Engine/DDM3-Lite/Utils/: Utils.cpp  Utils.h
DDM3-Lite-Engine/DDM3-Lite/Vulkan/: VulkanObject.cpp  VulkanObject.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanUtils.cpp
source/: CMakeLists.txt  Config.json  D3D-Lite-Engine.sln
source/D3D-Lite/: CMakeLists.txt  Config.json
source/D3D-Lite-Engine/: CameraComponent.cpp  CameraComponent.h  CommandpoolManager.cpp  CommandpoolManager.h  Component.h  Config.json  ConfigManager.h  CubeMapMaterial.cpp  CubeMapMaterial.h  D3DEngine.cpp  D3DEngine.h  D3DModelLoader.cpp  DescriptorPoolManager.cpp  DescriptorPoolManager.h  DescriptorPoolWrapper.cpp  DescriptorPoolWrapper.h  DirectionalLightComponent.cpp  DirectionalLightComponent.h  DirectionalLightObject.cpp  DirectionalLightObject.h  GPUObject.h  GameObject.cpp  GameObject.h  ImGuiWrapper.cpp  ImageManager.cpp  ImageManager.h  ImageViewManager.cpp  ImageViewManager.h  InstanceWrapper.cpp  InstanceWrapper.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshRenderComponent.cpp  MeshRenderComponent.h  ModelComponent.cpp  ModelComponent.h  ModelLoader.h  PipelineManager.cpp  (+41 more)
source/D3D-Lite-Engine/BaseClasses/: GameObject.cpp
source/D3D-Lite-Engine/Components/: CameraComponent.cpp  CameraComponent.h  DirectionalLightComponent.h  MeshRenderComponent.cpp  MeshRenderComponent.h  SkyBoxComponent.h  TransformComponent.cpp
source/D3D-Lite-Engine/DataTypes/: Mesh.cpp
source/D3D-Lite-Engine/Engine/: D3DEngine.h  Scene.cpp  Scene.h  Window.cpp  main.cpp
source/D3D-Lite-Engine/Managers/: ConfigManager.h  SceneManager.cpp  SceneManager.h
source/D3D-Lite-Engine/Utils/: Utils.h
source/D3D-Lite-Engine/Vulkan/: VulkanRenderer.cpp
source/D3D-Lite/BaseClasses/: GameObject.cpp  GameObject.h
source/D3D-Lite/Components/: AnimatorComponent.h  DirectionalLightComponent.cpp  MeshRenderComponent.cpp  MeshRenderComponent.h  ModelLoaderComponent.cpp  ModelLoaderComponent.h  RotatorComponent.cpp  SkyBoxComponent.cpp  SpectatorMovementComponent.cpp  TransformComponent.cpp  TransformComponent.h
source/D3D-Lite/DataTypes/: Mesh.h  Structs.h
source/D3D-Lite/Engine/: D3DEngine.cpp  Scene.cpp  Scene.h  Window.cpp  Window.h  main.cpp
source/D3D-Lite/Includes/: FbxSdkIncludes.h  GLMIncludes.h  ImGuiIncludes.h
source/D3D-Lite/Managers/: ConfigManager.h  ResourceManager.cpp  ResourceManager.h  TimeManager.h
source/D3D-Lite/Utils/: Utils.cpp  Utils.h
source/D3D-Lite/Vulkan/: VulkanRenderer.cpp  VulkanRenderer.h
source/D3DLite/: CameraComponent.h  Component.h  D3DEngine.cpp  GameObject.cpp  GameObject.h  Model.cpp  ModelComponent.cpp  ModelComponent.h  RotatorComponent.cpp  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  TimeManager.cpp  TimeManager.h  TransformComponent.cpp  TransformComponent.h  VulkanRenderer.cpp  VulkanRenderer.h  imgui.ini  main.cpp
source/Resources/: CMakeLists.txt
source/Resources/DefaultResources/: Default.Frag.spv  Default.Vert.spv  Default.frag  Default.vert  compile.bat
source/Resources/Models/: MarioDancing.fbx
source/Resources/Shaders/: CMakeLists.txt  DiffNorm.vert  DiffNormSpec.vert  Diffuse.frag.spv  MultiShader.frag  MultiShader.vert  NormalMap.vert  Skinned.vert  Skybox.vert  Specular.vert  Test.frag
(+392 files in other folders)
